--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <body style="background-image:url('https://cdn.staticcrate.com/stock-hd/effects/FootageCrate-4K_Anime_Fire_Transition_1@3X.png'); background-repeat: no-repeat; background-size: cover !important;margin:0;">
 
-<img align=right src=https://i.postimg.cc/3R3xKDFW/Order-Shay-removebg-preview.png width=auto height=100% style="">
+<img align=right src=https://i.postimg.cc/g2BYJ76w/Shay-Esshar-age-30-removebg-preview.png width=auto height=100% style="">
 
 <br>
 <br>
@@ -11,18 +11,18 @@
 
 <center>
 <div style="background-color:#cc0000" >
-<font color="#ffd700" face='georgia' size=7><b>Shay Deluca</b></font>
+<font color="#ffd700" face='georgia' size=7 style="font-family: Garamond, Times, serif;"><b>Shay Deluca</b></font>
 
  <br>
 
-<font color="#ffd700" face='verdana' size='2'>Has great potential but lacks something
+<font color="#ffd700" face='verdana' size='4' style="font-family: Garamond, Times, serif;">The passing by warrior scholar
 
 </font>
 
 </div>
 </center>
 
-<iframe width=0 height=0 src=https://www.youtube.com/embed/yZDlNh4aMSM?autoplay=1 title=YouTube video player frameborder=0 allow=accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen></iframe>
+<iframe width=0 height=0 src=https://www.youtube.com/embed/M64EcbhU2Uo?autoplay=1 title=YouTube video player frameborder=0 allow=accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture allowfullscreen></iframe>
 
 
 <script>
